--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 authors = ["Sushant <sushant.dinesh94@gmail.com>"]
 
 [[bin]]
-name = "mpiun"
+name = "mpirun"
 path = "mpirun/main.rs"
+
+[[examples]]
+path = "examples/"
 
 [dependencies]
 docopt = "0.6"
