--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
 name = "mpirs"
 version = "0.1.0"
-authors = ["Sushant <sushant.dinesh94@gmail.com>"]
+authors = ["Sushant <sushant.dinesh94@gmail.com>",
+           "Karthik Senthil <karthik.senthil@gmail.com>"]
 
 [[bin]]
 name = "mpirun"
 path = "mpirun/main.rs"
-
-[[examples]]
-path = "examples/"
 
 [dependencies]
 docopt = "0.6"
